# munk-runner

./: Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
src/: main.rs  test.wat
