[package]
name = "munk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
deno_core = "0.339.0"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
url = "2"